# stra_retrospect_traveler

./: CMakeLists.txt  EcosystemSystem.cpp  EcosystemSystem.h  ExampleScene.cpp  ExampleScene.h  GameConstants.h  GameManager.cpp  GameManager.h  Player.cpp  Player.h  README.md  RenderManager.cpp  RenderManager.h  ResonanceSystem.cpp  ResonanceSystem.h  TimeSystem.cpp  TimeSystem.h  UIManager.cpp  UIManager.h  audiomanager.cpp  audiomanager.h  basescene.cpp  basescene.h  gameconfig.cpp  gameconfig.h  gameengine.cpp  gameengine.h  gameloop.cpp  gameloop.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  inputmanager.cpp  inputmanager.h  loginwidget.ui  main.cpp  pluginmanager.cpp  pluginmanager.h  resourcemanager.cpp  resourcemanager.h  (+3 more)
assets/config/: game.json
docs/: README.md  config_resource_doc.html  config_resource_doc.xml  dev_guide_doc.html  dev_guide_doc.xml  development_guide.md  game_design_doc.html  game_design_doc.xml  mingw_build_guide.md  phase1_development_guide.md  plugin_development_guide.md  project_ops_doc.html  project_ops_doc.xml  tech_arch_doc.html  tech_arch_doc.xml
modules/CoreModule/: CMakeLists.txt  CoreModule_global.h  coremodule.cpp  coremodule.h
plugins/: CMakeLists.txt  ExampleContentPlugin.cpp  ExampleContentPlugin.h  ExampleGameplayPlugin.cpp  ExampleGameplayPlugin.h  ExampleUIPlugin.cpp  ExampleUIPlugin.h  example_content_plugin.json  example_gameplay_plugin.json  example_ui_plugin.json
plugins/ContentPlugin/: CMakeLists.txt  ContentPlugin.cpp  ContentPlugin.h  content.json
plugins/HelloWorldPlugin/: CMakeLists.txt  HelloWorldPlugin.cpp  HelloWorldPlugin.h  helloworld.json
plugins/UIPlugin/: CMakeLists.txt  UIPlugin.cpp  UIPlugin.h  ui.json
resources/config/: characters.json  enemies.json  game.json  items.json  levels.json  starcore.json
src/: gameengine.h
src/Utile/: globaltool.cpp  globaltool.h  logtool.cpp  logtool.h
src/core/: audiomanager.cpp  audiomanager.h  eventmanager.cpp  eventmanager.h  inputmanager.h  pluginmanager.cpp  resourcemanager.cpp  resourcemanager.h  savesystem.cpp  savesystem.h  scenemanager.cpp
src/game/: aisystem.cpp  aisystem.h  combatsystem.cpp  combatsystem.h  ecosystemsystem.cpp  ecosystemsystem.h  enemy.cpp  enemy.h  inventorysystem.cpp  inventorysystem.h  questsystem.cpp  questsystem.h  resonancesystem.cpp  resonancesystem.h  skillsystem.cpp  skillsystem.h  timesystem.cpp  timesystem.h
src/render/: camerasystem.cpp  camerasystem.h  particlesystem.cpp  particlesystem.h  rendermanager.cpp  rendermanager.h  spriteanimation.cpp  spriteanimation.h  tilemap.cpp  tilemap.h
src/ui/: dialogbox.cpp  dialogbox.h  dialogbox.ui  inventorypanel.cpp  inventorypanel.h  inventorypanel.ui  mainmenu.ui  starmappanel.cpp  starmappanel.h  talentpanel.cpp  talentpanel.h  uimanager.cpp  uimanager.h
